tests/errors/semantic/blocking/TYPE_ALIAS_REASSIGN.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from typing import TypeAlias

MyType : TypeAlias = int

MyType = float
